<resources>
    <string name="app_name">ATR Supply</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="continue_as">Continue as a </string>
    <string name="guest">Guest</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_atr_app">Welcome\nto ATR App</string>
    <string name="please_enter_your_data_to_continue">Please enter your data to continue</string>
    <string name="email">Email</string>
    <string name="email_or_customer_code">Email Or Customer Code</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="fill_your_info">Fill your info</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="upload_your_pdf">Upload your documents</string>
    <string name="upload_national_id">Upload National ID</string>
    <string name="upload_license">Upload license</string>
    <string name="upload_commercial_register">Upload commercial register</string>
    <string name="upload_lease_or_ownership_contract">Upload Lease or ownership contract</string>
    <string name="upload_tax_card">Upload Tax card</string>
    <string name="google_map_key">AIzaSyA6rGnt_C0SV-Bxe0sSKS2G0BIu2D0CW_A</string>
    <string name="address">Address</string>
    <string name="fill_your_address">Fill your address</string>
    <string name="your_input_is_being_uploaded_please_wait_while_we_approve_your_request">Your input is being uploaded. \nPlease wait while we approve your request</string>
    <string name="continue_as_guest">continue as guest</string>
    <string name="forget_password">Forget password</string>
    <string name="please_enter_the_mail_address">Please enter the mail address\nor phone number you used\nwhen you joined</string>
    <string name="verify">Verify</string>
    <string name="enter_the_verification_code_that_we_sent_you_to_your_phone_number">Enter the verification code that we sent you to\nyour phone number</string>
    <string name="create_new_password">Create new password</string>
    <string name="you_have_successfully_reset_your_password_please_use_your_new_password_when_logging_in">You have successfully reset your password.Please use your new password when logging in</string>
    <string name="password_reset_successful">Password reset\nsuccessful</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="view_all">View All</string>
    <string name="pharma">Pharma</string>
    <string name="best_seller">Best Seller</string>
    <string name="best_sellers">Bestsellers</string>
    <string name="no_products">No Products</string>
    <string name="filter">Filter</string>
    <string name="nothing">" "</string>
    <string name="size_">Size:</string>
    <string name="availability_">Availability :  </string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="select_the_quantity">Select the quantity</string>
    <string name="description">Description</string>
    <string name="description_etc">
        •\t\tEva Hair Clinic is a hair care brand that offers a variety
        \n\t\tof products for different hair types and
        \n\t\tneeds.
        \n•\t\tSome of their products include shampoos,
        \n\t\tconditioners, hair masks, serums, and styling products.
    </string>
    <string name="my_cart">My Cart</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="checkout">Checkout</string>
    <string name="grand_total">Grand Total With Tax: </string>
    <string name="delivery_free">Delivery :</string>
    <string name="discount">Discount : </string>
    <string name="item_total">Item Total : </string>
    <string name="user_reviews">User Reviews</string>
    <string name="you_might_also_like">You might also like</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="change">Change</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="fawry">Fawry</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="choose_area">Choose area</string>
    <string name="choose_city">Choose city</string>
    <string name="add">Add</string>
    <string name="add_new_address">Add new address</string>
    <string name="back">back</string>
    <string name="add_card">Add card</string>
    <string name="apply">Apply</string>
    <string name="your_pdf">Your PDF</string>
    <string name="update">Update</string>
    <string name="who_we_are">Who we are</string>
    <string name="aboutUs">"Established in 1975, today, ATR is a full-fledged commercial service provider, offering 360° services and solutions to our clients in the pharmaceutical, cosmetics, medical devices and FB fields in the MENA region.
With a manpower that exceeds 1000 employees, vast resources, strong distribution networks and in-depth consumer and market knowledge, our clients are able to maximize their presence globally, and become leaders in their industry.
Our Services build brands and supports our clients in expanding achieving the maximum presentation and awareness through; providing supply chain, sales distribution, marketing intelligence, importation  regulatory and  concept strategy development services.
In addition to a wide range of other complementary services, that are offered through specialized and dedicated teams, studying the different markets, aware of the best practices, to offer the best tailor-made services to our clients."</string>
    <string name="return_policy">Return Policy</string>
    <string name="return_policy_text">At Rideshare, accessible from rideshare.com, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by rideshare and how we use it. If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="terms_condition_text">This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in rideshare. This policy is not applicable to any information collected offline or via channels other than this website. Our Privacy Policy was created with the help of the Free Privacy Policy Generator.</string>
    <string name="order_history">Order History</string>
    <string name="view_order">View Order</string>
    <string name="order_details">Order Details</string>
    <string name="contact_us">Contact Us</string>
    <string name="company_address">Company Address</string>
    <string name="return_items">Return Items</string>
    <string name="confirm_your_return">Confirm your return</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="date">Date:</string>
    <string name="reviews">Reviews</string>
    <string name="give_a_review">Give a review</string>
    <string name="filters">Filters</string>
    <string name="like">Like</string>
    <string name="submit_a_review">Submit a review</string>
    <string name="write_a_review">Write a Review</string>
    <string name="tap_a_star_to_rate">Tap a star to rate</string>
    <string name="notifications">Notifications</string>
    <string name="you_can_pay_with_an_instant_code_the_code_is_valid_for_payment_within_12_hours">You can pay with an instant code.\nThe code is valid for payment within 12 hours</string>
    <string name="fawry_code">Fawry code :</string>
    <string-array name="cities">
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Giza</item>
        <item>Shubra El-Kheima</item>
        <item>Port Said</item>
        <item>Suez</item>
        <item>Luxor</item>
        <item>Asyut</item>
        <item>Ismailia</item>
        <item>Fayyum</item>
        <item>Aswan</item>
        <item>Damanhur</item>
        <item>Minya</item>
        <item>Zagazig</item>
        <item>Qena</item>
        <item>Sohag</item>
        <item>Hurghada</item>
        <item>Beni Suef</item>
        <item>Menufiya</item>
        <item>Desouk</item>
        <item>Edfu</item>
        <item>Tanta</item>
        <item>Marsa Matruh</item>
        <item>Kafr El Sheikh</item>
        <item>El Mahalla El Kubra</item>
        <item>Damietta</item>
        <item>10th of Ramadan City</item>
        <item>Sheikh Zayed City</item>
        
    </string-array>
    <string-array name="cairo_areas">
        <item>Zamalek</item>
        <item>Dokki</item>
        <item>Mohandessin</item>
        <item>Maadi</item>
        <item>Nasr City</item>
        <item>Heliopolis</item>
        <item>6th of October City</item>
        <item>Tagamo3 (New Cairo)</item>
        <item>Abbassiya</item>
        <item>Shubra</item>
        <item>Ramses</item>
        <item>Helwan</item>
        <item>Madinet Nasr</item>
        <item>Shobra El-Kheima</item>
    </string-array>
    <string name="title_activity_add_fawry">AddFawryActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="cvc">CVC</string>
    <string name="mm_yy">MM/YY</string>
    <string name="xxxx_xxxx_xxxx_xxxx">XXXX XXXX XXXX XXXX</string>
    <string name="card_holder_name">Card holder name</string>
    <string name="your_name">Your name</string>
    <string name="card_number">Card number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="about_us">About Us</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="your_order_has_been_confirmed_we_will_send_you_a_confirmation_email_shortly">Your order has been confirmed, we will send you a confirmation email shortly.</string>
    <string name="track_order">Track Order</string>
    <string name="cart_added_title">Product added to cart</string>
    <string name="cart_added_message">Do you want to go to your shopping cart?</string>
    <string name="cart_bonus_message">Congratulations! You got %1$d as a Bonus 🎁</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="subtotal_before_tax">Subtotal (Before Tax)</string>
    <string name="tax">V.A.T / Tax</string>
    <string name="total_after_tax">Total Amount</string>
    <string name="items_count_label">Items Count</string>
    <string name="total_pieces_label">Total Quantity / Pieces</string>
</resources>