<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />
        <item
            android:id="@+id/favorite"
            android:title="@string/favorite"
            android:icon="@drawable/ic_favorite2"
            />
        <item
            android:id="@+id/nothig"
            android:title="@string/nothing"
            />
        <item
            android:id="@+id/cart"
            android:title="@string/cart"
            android:icon="@drawable/ic_cart"
            />
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"
            />
    </group>

</menu>