<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="338dp"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/_22sdp"
    android:layout_margin="@dimen/_22sdp"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done"/>

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:text="@string/order_confirmed" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="22dp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:text="@string/your_order_has_been_confirmed_we_will_send_you_a_confirmation_email_shortly" />

    <TextView
        android:id="@+id/positive_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="22dp"
        android:text="@string/track_order"
        android:textColor="@color/orange"
        android:backgroundTint="@color/snack_green"
        android:layout_marginRight="8dp" />

</LinearLayout>